[package]
name = "khroma"
version = "0.1.0"
edition = "2024"
description = "Chroma Client API (v2) with Rust"
readme = "README.md"
repository = "https://github.com/sharp0802/khroma"
license = "MIT"
keywords = ["chroma", "chroma-db", "database"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
thiserror = "2.0"
